# actinia-module-plugin

./: .coveragerc  .dockerignore  .flake8  .gitignore  README.md  actinia-module.md  pyproject.toml  ruff.toml  setup.cfg  setup.py  tests_with_kvdb.sh  tests_with_redis.sh  update_actinia_core_major_version.sh
.github/workflows/: black.yml  flake8.yml  linting.yml  post-pr-reviews.yml  super-linter.yml  test.yml
actinia_gdi/: endpoints.py  main.py
actinia_module_plugin/: __init__.py  endpoints.py  main.py
actinia_module_plugin/api/: actinia_modules.py  actinia_templates.py  gdi_processing.py  processing.py
actinia_module_plugin/apidocs/: gmodules.py  modules.py  templates.py
actinia_module_plugin/core/: actinia_module.py  actinia_templates.py  common.py  filter.py  gmodulesActinia.py  gmodulesGrass.py  gmodulesParser.py  gmodulesProcessor.py  processing.py  redis_actinia_module.py  template_parameters.py
actinia_module_plugin/model/: modules.py
actinia_module_plugin/resources/: cli.py  config.py  logging.py  templating.py
actinia_module_plugin/static/: index.html
actinia_module_plugin/templates/: README.md
config/mount/: sample.ini
docker/: README.md
docker/actinia-module-plugin-test/: Dockerfile  actinia-module-plugin-test.cfg
docker/release/: Dockerfile  README.md  (+1 more)
tests/: README.md  conftest.py  test_actinia_modules.py  test_actinia_templates.py  test_actiniamodules.py  test_env_values.py  test_grass_modules.py  test_main.py  test_modules.py  test_modules_actinia_global.py  test_modules_actinia_processing.py  test_modules_actinia_user.py  test_modules_grass.py  test_processing_global.py  test_processing_user.py  test_resources_cli.py  test_templates.py  testsuite.py
(+98 files in other folders)
