[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "actinia-module-plugin"
version = "2.5.1"
description = "A (RESTFUL) Flask application which adds module self-description and process-chain-template management to actinia-core"
readme = "README.md"
authors = [
    { name = "Carmen Tawalika"},
    { name = "Markus Neteler"},
    { name = "Julia Haas"},
    { name = "Guido Riembauer"},
    { name = "Anika Weinmann"},
    { name = "Jan Suleiman"},
    { name = "Lina Krisztian"},
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
keywords = [
    "processing",
    "earth observation",
    "cloud-based processing",
    "rest api",
    "gis",
    "grass gis",
    "osgeo",
]
dependencies = [
    "colorlog>=4.2.1",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
pc2grass = "actinia_module_plugin.resources.cli:pc2grass"

[project.urls]
Homepage = "https://github.com/mundialis/actinia-module-plugin"
Tutorial = "https://mundialis.github.io/actinia_core"
API_Docs = "https://redocly.github.io/redoc/?url=https://actinia.mundialis.de/latest/swagger.json"

[tool.flake8]
max-line-length = 88

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov actinia_module_plugin --cov-report term-missing --verbose --tb=line -x -s"
testpaths = [
    "tests",
]
markers = [
    "dev: test current in development",
]
